@@ -1,6 +1,7 @@
 0.11.0
 ------
 
+* Reimplement Table method proxying via @allow_tableset_proxy decorator. (#263)
 * Add agate-stats references to docs.
 * Move stdev_outliers, mad_outliers and pearson_correlation into agate-stats. (#260)
 * Add agate-charts references to docs. (#259)
